# metallicious

./: .buildinfo  MANIFEST.in  README.md  __init__.py  antechamber_interface.py  charges.py  copy_topology_params.py  data.py  extract_main_structure.py  extract_metal_site.py  genindex.html  improper_torsion.py  index.html  initial_site.py  load_fingerprint.py  main.py  mapping.py  metal_site.py  parametrize_new_sites.py  prepare_initial_topology.py  pyproject.toml  requirements.txt  search.html  searchindex.js  seminario.py
.doctrees/: environment.pickle  index.doctree
doc/: conf.py
docs/source/: conf.py  examples.rst  index.rst  installation.rst  tutorials.rst  usage.rst
examples/example1/: cage_m6l12_ob.xyz  example1.py  linker.top
examples/example10/: ligand0_1.xyz  ligand0_2.xyz
examples/example10_bulky_aromatics/: example10.py
examples/example11_guess/: cage.xyz  example11.py
examples/example13_covalent_metal/: example5.py
examples/example14_partial_test/: example14.py
examples/example15_seminario_test/: example15.py
examples/example2/: example2.py  linker.itp  new_cage.gro
metallicious/: M.itp  __init__.py  __main__.py  antechamber_interface.py  asserts.py  charges.py  copy_topology_params.py  data.py  extract_main_structure.py  extract_metal_site.py  improper_torsion.py  initial_site.py  load_fingerprint.py  log.py  main.py  mapping.py  mod_seminario.py  parametrize_new_sites.py  patcher.py  prepare_initial_topology.py  seminario.py  utils.py
metallicious.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+232 files in other folders)
