[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metallicious"
version = "0.2.10"

dependencies = [
    "numpy",
    "MDAnalysis",
    "rdkit",
    "parmed",
    "networkx",
    "psiresp"]

[project.scripts]
metallicious = "metallicious.__main__:main"